--- a/Team/Sudha/index.html
+++ b/Team/Sudha/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HTML + Javascript</title>
+  <title>HTML + Javascript learning</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
   <link rel="stylesheet" href="css/styles.css">
@@ -11,6 +11,7 @@
 
   <pre>www.training.com/freshers/beginners/
   www.training.com/js/app.js
+
   </pre>
 </body>
 </html>
