--- a/Team/Hyma/intro2/index.html
+++ b/Team/Hyma/intro2/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <script src="js/app.js"></script>
+  <script src="app.js"></script>
 
   <pre>www.training.com/freshers/beginners/
   www.training.com/js/app.js
