--- a/Team/Arjun/index.html
+++ b/Team/Arjun/index.html
@@ -1,1 +1,9 @@
-<h3> Trying </h>
+<html>
+    <head>
+        <h3> Print Ticket </h>
+            <script>
+                promt("How much ticket you want");
+            </script>
+    </head>
+
+</html>
