--- a/Team/Arjun/index.html
+++ b/Team/Arjun/index.html
@@ -2,8 +2,7 @@
     <head>
         <h3> Print Ticket </h>
             <script>
-                alert("heee");
-                promt("How much ticket you want");
+                prompt("How much ticket you want");
             </script>
     </head>
 
