--- a/Team/Arjun/index.html
+++ b/Team/Arjun/index.html
@@ -3,6 +3,10 @@
         <h3> Print Ticket </h>
             <script>
                 prompt("How much ticket you want");
+
+                prompt("Where do you want to travel");
+
+                prompt("Total Ticket Amount");
             </script>
     </head>
 
