--- a/Team/Arjun/index.html
+++ b/Team/Arjun/index.html
@@ -1,13 +1,7 @@
 <html>
     <head>
-        <h3> Print Ticket </h>
-            <script>
-                prompt("How much ticket you want");
+        <pre> Print Ticket </pre>
 
-                prompt("Where do you want to travel");
-
-                prompt("Total Ticket Amount");
-            </script>
     </head>
 
 </html>
