My First JS Injected Page

--- a/Team/BalaKumar/index.html
+++ b/Team/BalaKumar/index.html
@@ -1,16 +1,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HTML + Javascript</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <title>Home Work - Web Page</title>
+  <meta name="description" content="I'm using this page to do the daily task - Balakumar Saravanavel">
+  <meta name="author" content="Balakumar Saravanavel">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <script src="js/app.js"></script>
-
-  <pre>www.training.com/freshers/beginners/
-  www.training.com/js/app.js
-  </pre>
+  <pre>First JS Injected Page</pre>
 </body>
 </html>
