--- a/Team/Arjun/index.html
+++ b/Team/Arjun/index.html
@@ -1,7 +1,10 @@
 <html>
     <head>
         <pre> Print Ticket </pre>
-        <script>src="..\Arjun\app.js"</script>
+        <script src="..\Arjun\app.js" > </script>
     </head>
+    <body>
+        
+    </body>
 
 </html>
