Ternary Task Completed

--- a/Team/BalaKumar/index.html
+++ b/Team/BalaKumar/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <script src="..\BalaKumar\js\app.js"></script>
+  <script src="..\BalaKumar\js\ticket.js"></script>
+  <script src="..\BalaKumar\js\ternary.js"></script>
   <pre>First JS Injected Page</pre>
 </body>
 </html>
